# dynamic_onboarding_form

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/onboarding_forms/: admin.py  apps.py  forms.py  models.py
src/onboarding_forms/api/: serializers.py  urls.py  views.py
src/onboarding_forms/migrations/: 0001_initial.py  0002_establishmentquestion.py  0003_remove_establishmentquestion_title_and_more.py  0004_clientresponse.py  0005_rename_clientresponse_clienttyperesponse_and_more.py  0006_rename_clienttyperesponse_clientresponse_and_more.py  0007_alter_clientresponse_options_and_more.py
src/onboarding_forms/templates/onboarding_forms/: base.html  details.html  establishments.html  home.html  index.html  questions.html  success.html
