[tool.poetry]
name = "dynamic-onboarding-form"
version = "0.1.0"
description = ""
authors = ["matvey <matgr2n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
